--- a/src/container/Weather/Weather.css
+++ b/src/container/Weather/Weather.css
@@ -1,46 +1,35 @@
 .fields {
     width: 100%;
     display: inline-block;
-    padding: 40px 5px 5px 5px;
+    padding: 75px 5px 5px 5px;
 }
 .fields input {
     border: none;
     outline: none;
-
+    width: 80%;
     background: none;
     font-size: 18px;
     color: #555;
     padding: 20px 10px 20px 5px;
 }
-.fields input[type="text"] {
-    font-family: "Courier New", Courier, monospace;
-}
 .fields .input {
     display: inline-block;
-
+    width: 50%;
     margin: auto 50px;
     border-radius: 25px;
     box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #ffffff;
 }
 .fields svg {
     height: 22px;
-    margin: auto 14px;
+    margin: 0 10px -3px 25px;
 }
-.title {
-    text-align: center;
-    font-size: 28px;
-    padding-top: 24px;
-    letter-spacing: 0.5px;
-}
-.title h3 {
-    margin: 0;
-}
+
 .btn {
     text-decoration: none;
     outline: none;
     border: none;
     cursor: pointer;
-    width: auto;
+    width: 20%;
     height: 60px;
     border-radius: 30px;
     font-size: 20px;
@@ -48,10 +37,13 @@
     font-family: "Lato", sans-serif;
     color: #fff;
     text-align: center;
-    background: #e6e6e6;
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
+    background: #24cfaa;
+    box-shadow: 3px 3px 8px #b1b1b1, -3px -3px 8px #ffffff;
     transition: 0.5s;
 }
 .btn:hover {
-    background: #cecece;
+    background: #2fdbb6;
+}
+.btn:active {
+    background: #1da88a;
 }
